--- a/campusx/src/main/resouces/application.properties
+++ b/campusx/src/main/resouces/application.properties
@@ -9,6 +9,7 @@ DAO.PASSWORD_NOT_MATCH=Incorrect Password.
 
 Service.INVALID_PHONE_NUMBER_FORMAT=Invalid phone number format.
 Service.INVALID_EMAIL_FORMAT=Invalid email ID format.
+Service.INVALID_PASSWORD_FORMAT=Invalid password format.
 Service.INVALID_FILE_SIZE=Image not found.
 Service.OTP_EXPIRED=This OTP is expired. Try again with different one.
 Service.INVALID_OTP=This OTP is not valid.
@@ -20,14 +21,16 @@ Service.USER_DOES_NOT_EXISTS=Sorry, user does not exist.
 
 Service.VENDOR_PHONE_ALREADY_EXISTS=Phone number already exist.
 Service.USER_PHONE_NUMBER_ALREADY_EXISTS=This phone number already exist.
-Service.EMAIL_OR_PHONE_ALREADY_EXISTS=Email ID or phone number already registered.
+Service.SHOP_PHONE_ALREADY_EXISTS=Shop phone number already registered.
+Service.SHOP_EMAIL_ALREADY_EXISTS=Shop Email id already registered.
 
 API.SHOP_REGISTRATION_SUCCESS=Congratulations, shop registered successfully.
 API.KYC_VERIFICATION_SUCCESS=Hurray, KYC successful.
 API.ITEM_ADDED_SUCCESS=Keep going, your catalog is increased by one.
 
 API.VENDOR_PHONE_NUMBER_UPDATE_SUCCESS=Phone number updated.
-API.SHOP_EMAIL_OR_PHONE_UPDATE_SUCCESS=Shop contact info updated.
+API.SHOP_PHONE_UPDATE_SUCCESS=Shop Phone number updated.
+API.SHOP_EMAIL_UPDATE_SUCCESS=Shop Email ID updated.
 API.SHOP_ADDRESS_UPDATE_SUCCESS=Shop address updated.
 API.USER_PHONE_NUMBER_UPDATE_SUCCESS=User phone number updated.
 API.PASSWORD_UPDATE_SUCCESS=Password updated.
