--- a/campusx/src/main/resouces/application.properties
+++ b/campusx/src/main/resouces/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=campusx
 spring.datasource.password=campusx
 
 server.port=9001
+jwt.secret=helloworld
 
 DAO.ACCOUNT_CLOSED=User Account is closed.
 DAO.PASSWORD_NOT_MATCH=Incorrect Password.
