--- a/campusx/pom.xml
+++ b/campusx/pom.xml
@@ -10,7 +10,7 @@
 
   <name>campusx</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://campusx.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -77,10 +77,26 @@
     </dependency>
     
     <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    
+    <dependency>
 	    <groupId>org.mindrot</groupId>
 	    <artifactId>jbcrypt</artifactId>
 	    <version>0.3m</version>
 	</dependency>
+
+    <dependency>
+    	<groupId>io.jsonwebtoken</groupId>
+    	<artifactId>jjwt</artifactId>
+    	<version>0.9.1</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>javax.xml.bind</groupId>
+    	<artifactId>jaxb-api</artifactId>
+    </dependency>
     
   </dependencies>
 
