--- a/campusx/pom.xml
+++ b/campusx/pom.xml
@@ -81,6 +81,12 @@
 	    <artifactId>jbcrypt</artifactId>
 	    <version>0.3m</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>commons-net</groupId>
+		<artifactId>commons-net</artifactId>
+		<version>3.6</version>
+	</dependency>
     
   </dependencies>
 
